Course project 2 - Josh Hopkins Reproducible Research

--- a/Reproducible Research Assignment - Course Project 2.qmd
+++ b/Reproducible Research Assignment - Course Project 2.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Personal Activity Monitoring Device Research"
+title: "A Comprehensive Analysis of Storm-Induced Damages: Insights from NOAA Data"
 subtitle: 'Reproducible Research'
 affiliation: 'Johns Hopkins University'
 author: 'Alejandro Navas González'
